integrate flutter wave payment API

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -431,7 +431,11 @@
       <strong class="cart-total-title">Total</strong>
       <span class="cart-total-price">0/=</span>
     </div>
-    <button class="btn-purchase" type="button">order</button> 
+    <form>
+      <script src="https://checkout.flutterwave.com/v3.js"></script>
+      <button class="btn-purchase" type="button" onClick="makePayment()">Pay Now</button>
+    </form>
+    <!-- <button class="btn-purchase" type="button">order</button>  -->
   </section>
 </div>
   <!--end of cart section-->
@@ -441,6 +445,42 @@
     <p>&copyAllrightsreservedLollifudhub2020</p>
   </div>
   <script src="./App.js"></script>
+
+  <script>
+    function makePayment() {
+      FlutterwaveCheckout({
+        public_key: "FLWPUBK_TEST-SANDBOXDEMOKEY-X",
+        tx_ref: "RX1",
+        amount: 10,
+        currency: "USD",
+        country: "US",
+        payment_options: " ",
+        redirect_url: // specified redirect URL
+          "https://callbacks.piedpiper.com/flutterwave.aspx?ismobile=34",
+        meta: {
+          consumer_id: 23,
+          consumer_mac: "92a3-912ba-1192a",
+        },
+        customer: {
+          email: "cornelius@gmail.com",
+          phone_number: "08102909304",
+          name: "Flutterwave Developers",
+        },
+        callback: function (data) {
+          console.log(data);
+        },
+        onclose: function() {
+          // close modal
+        },
+        customizations: {
+          title: "My store",
+          description: "Payment for items in cart",
+          logo: "https://assets.piedpiper.com/logo.png",
+        },
+      });
+    }
+  </script>
+  
 </body>
 
 </html>
