chnaged title on payment api

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -477,7 +477,7 @@
           // close modal
         },
         customizations: {
-          title: "My store",
+          title: "Lolifudhub",
           description: "Payment for items in cart",
           logo: "https://assets.piedpiper.com/logo.png",
         },
