add mobile money payment

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -457,7 +457,7 @@
         public_key: "FLWPUBK_TEST-SANDBOXDEMOKEY-X",
         tx_ref: "RX1",
         amount: storedTotal,
-        currency: "USD",
+        currency: "UGX",
         country: "US",
         payment_options: " ",
         redirect_url: // specified redirect URL
