add payment options

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -458,8 +458,8 @@
         tx_ref: "RX1",
         amount: storedTotal,
         currency: "UGX",
-        country: "US",
-        payment_options: " ",
+        country: "UGANDA",
+        payment_options: "mobilemoneyuganda, card, banktransfer ,ussd",
         redirect_url: // specified redirect URL
           "https://callbacks.piedpiper.com/flutterwave.aspx?ismobile=34",
         meta: {
